--- a/locales/ko.yml
+++ b/locales/ko.yml
@@ -18,6 +18,11 @@ pages:
     nav: 게시하다
     title: 게시하다
     description: 이것은 게시물 페이지입니다
+  blog:
+    nav: 블로그
+    title: 블로그
+    description: 이것은 블로그 페이지입니다
+    just_blog_page_with_title: 제목이 있는 블로그 페이지
   test:
     nav: 테스트
     title: 테스트
